--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,13 @@
+@font-face {
+	font-family: MatSaleh;
+	src: url(../assets/font/mat_saleh/MatSaleh.otf);
+}
+
 * {
 	padding: 0%;
 	margin: 0%;
 	box-sizing: border-box;
+	font-family: MatSaleh;
 }
 
 // VARIABLES START
@@ -13,6 +19,9 @@ $color2: #606060;
 html {
 	width: 100%;
 	font-size: 100%;
+}
+body {
+	overflow-x: hidden;
 }
 @media screen and (max-width: 992px) {
 	html {
@@ -141,7 +150,430 @@ html {
 	color: $color2;
 }
 
-// HERO CONTAINER START
+// HERO START
 .hero_container {
+	background: linear-gradient(180deg, #d6ff8f 0%, #d6ff8f 100%);
+	width: 100vw;
+	padding: 3.5rem 0rem 8rem 0rem;
+
+	.logo_container {
+		position: relative;
+		max-width: 450px;
+		margin-left: auto;
+		margin-right: auto;
+
+		img {
+			width: 100%;
+		}
+
+		.i4_stone {
+			position: absolute;
+			width: 45px;
+			bottom: -3rem;
+			left: -2.5rem;
+		}
+
+		.i5_stone {
+			position: absolute;
+			width: 50px;
+			right: -5rem;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+	}
+
+	.i1_stone {
+		position: absolute;
+		top: 0%;
+		left: 18%;
+		width: 120px;
+	}
+	.i2_stone {
+		position: absolute;
+		left: 5%;
+		top: 5%;
+		width: 120px;
+	}
+	.i3_stone {
+		position: absolute;
+		right: 0%;
+		top: 0%;
+		width: 140px;
+	}
 }
-// HERO CONTAINER END
+
+.characters {
+	position: relative;
+
+	img {
+		min-width: 100vw;
+		height: 100%;
+		margin-top: -14rem;
+	}
+}
+// HERO END
+
+// SOCIAL START
+.social_links {
+	position: absolute;
+	left: 50%;
+	top: 0%;
+	transform: translateX(-50%);
+	background: #cbee8e;
+	border-radius: 0px 0px 10px 10px;
+	padding: 0.8rem;
+
+	a {
+		margin: 0rem 0.32rem;
+
+		img {
+			width: 25px;
+		}
+	}
+}
+// SOCIAL END
+
+// MINT START
+.mint_container {
+	position: relative;
+	background: #ffe66f;
+	margin-top: -17.5rem;
+	width: 100vw;
+	padding-bottom: 4rem;
+	z-index: 1;
+
+	.inner_mint_container {
+		position: relative;
+
+		&::after {
+			content: "";
+			position: absolute;
+			background: url("../assets/mint.svg") no-repeat;
+			height: 120px;
+			width: 100vw;
+			top: -7rem;
+			z-index: -1;
+			background-size: cover;
+		}
+
+		.single_count {
+			position: relative;
+
+			.skele {
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%);
+			}
+		}
+
+		.i1_stone {
+			position: absolute;
+			right: 0%;
+			top: 0%;
+			width: 100px;
+			z-index: -1;
+		}
+		.i2_stone {
+			position: absolute;
+			left: 0%;
+			top: 25%;
+			width: 150px;
+			z-index: -1;
+		}
+
+		.min_btn {
+			max-width: 550px;
+			margin-left: auto;
+			margin-right: auto;
+
+			p {
+				color: #d8be41;
+				font-size: 1.5rem;
+			}
+
+			button {
+				position: relative;
+				background-color: #fff;
+				padding: 1rem 4rem;
+				border: none;
+				border-radius: 25px;
+
+				.i24_stone {
+					position: absolute;
+					right: -30%;
+					width: 50px;
+					top: -20%;
+				}
+
+				.i25_stone {
+					position: absolute;
+					left: -18%;
+					top: 0%;
+					width: 40px;
+				}
+
+				&::after {
+					content: "";
+					position: absolute;
+					left: 50%;
+					right: 0%;
+					top: 10%;
+					bottom: 0%;
+					height: 100%;
+					width: 103%;
+					transform: translateX(-50%);
+					border-radius: 25px;
+					background: #d8be41;
+					z-index: -1;
+				}
+			}
+		}
+	}
+
+	.counter_container {
+		position: absolute;
+		top: -4rem;
+		left: 50%;
+		transform: translateX(-50%);
+
+		img {
+			cursor: pointer;
+		}
+	}
+
+	.three_boxes {
+		margin-top: 1.8rem;
+		z-index: 1;
+		position: relative;
+
+		&::after {
+			content: "";
+			position: absolute;
+			background: url("../assets/minBottom.svg") no-repeat;
+			background-size: cover;
+			background-position-y: bottom;
+			background-position-x: right;
+			height: 135px;
+			bottom: -70%;
+			width: 100%;
+			z-index: -1;
+		}
+
+		.three_boxes_inner {
+			max-width: 900px;
+			margin-left: auto;
+			margin-right: auto;
+
+			.box {
+				width: 100%;
+				background: #fff;
+				color: #d8be41;
+				padding: 0.8rem 0rem;
+				border-radius: 30px;
+
+				h4 {
+					font-size: 1.8rem;
+					line-height: 30px;
+					margin-bottom: 0px;
+				}
+
+				&:nth-child(2) {
+					margin: 0rem 2rem;
+				}
+			}
+		}
+	}
+}
+// MINT END
+
+// ABOUT START
+.about_container {
+	background: #c5c6ff;
+	position: relative;
+	margin-top: 10rem;
+	z-index: 2;
+
+	&::after {
+		content: "";
+		position: absolute;
+		background: url("../assets/aboutTop.svg") no-repeat;
+		background-color: #ffe66f;
+		height: 200px;
+		width: 100vw;
+		top: 0%;
+		background-size: cover;
+		margin-top: -10rem;
+		z-index: -1;
+	}
+
+	.inner_about_container {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		z-index: 2;
+
+		.row {
+			z-index: 2;
+
+			.col-6:nth-child(1) {
+				img {
+					z-index: 2;
+				}
+			}
+
+			.col-6 {
+				margin-top: -10rem;
+
+				img:nth-child(2) {
+					margin-top: 2rem;
+				}
+			}
+
+			.col-6:nth-child(2) {
+				padding-top: 8rem;
+				height: 1100px;
+
+				.box {
+					border-radius: 50px;
+				}
+
+				.about_logo {
+					position: absolute;
+					top: 1%;
+				}
+
+				p {
+					font-size: 1.5rem;
+					line-height: 22px;
+					color: #140095;
+				}
+			}
+		}
+	}
+}
+// ABOUT END
+
+// ROADMAP START
+.roadmap_container {
+	background: url("../assets/roadmap.svg") no-repeat;
+	width: 100vw;
+	background-size: cover;
+	padding-top: 14rem;
+	padding-bottom: 8rem;
+
+	.inner_roadmap_container {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+
+		img {
+			height: 220px;
+		}
+
+		.col-7 {
+			font-size: 1.2rem;
+			color: #b97e48;
+			line-height: 22px;
+			font-weight: 500;
+		}
+
+		.col-5 {
+			position: relative;
+
+			h1 {
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%);
+				color: #fff;
+				line-height: 94px;
+				margin-bottom: 0px;
+				font-size: 5rem;
+			}
+		}
+	}
+}
+// ROADMAP END
+
+// DISPLAY START
+.display_container {
+	position: relative;
+	border-top: 10px solid #fff;
+	border-bottom: 10px solid #fff;
+	z-index: 1;
+}
+// DISPLAY END
+
+// FAQ START
+.faq_container {
+	position: relative;
+	background: linear-gradient(180deg, #9bffc1 0%, #9bffc1 100%);
+	padding-bottom: 6rem;
+
+	&::after {
+		content: "";
+		position: absolute;
+		background: url("../assets/faq.png") no-repeat;
+		height: 250px;
+		width: 100vw;
+		top: 8%;
+		background-size: cover;
+		background-position-x: center;
+		margin-top: -14rem;
+		z-index: 2;
+	}
+
+	.inner_faq_container {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-top: 12rem;
+
+		.box {
+			background: #140095;
+			border-radius: 35px;
+
+			.question {
+				background: linear-gradient(0deg, #ffffff, #ffffff);
+				border: 10px solid #140095;
+				border-radius: 35px;
+				padding: 1rem 1.4rem 1.2rem 1.4rem;
+				color: #140095;
+				font-size: 1.2rem;
+				line-height: 22px;
+			}
+
+			.answer {
+				padding: 0.2rem 2rem 1.5rem 2rem;
+				color: #ffffff;
+				font-size: 1.2rem;
+				line-height: 22px;
+			}
+		}
+	}
+}
+// FAQ END
+
+// FOOTER START
+.footer_container {
+	background: url("../assets/footer.svg") no-repeat;
+	height: 250px;
+	width: 100vw;
+	background-size: cover;
+	background-position-x: center;
+	background-color: #9bffc1;
+	position: relative;
+
+	.img_cont {
+		max-width: 500px;
+		margin-left: auto;
+		margin-right: auto;
+
+		img {
+			margin-top: -3.5rem;
+			width: 100%;
+		}
+	}
+}
+// FOOTER END
