--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,7 @@
 html {
   width: 100%;
   font-size: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -368,9 +369,10 @@ body {
 }
 
 .mint_container .three_boxes .three_boxes_inner {
-  max-width: 900px;
+  max-width: 920px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0rem 0.4rem;
 }
 
 .mint_container .three_boxes .three_boxes_inner .box {
@@ -412,9 +414,10 @@ body {
 }
 
 .about_container .inner_about_container {
-  max-width: 900px;
+  max-width: 920px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0rem 0.4rem;
   z-index: 2;
 }
 
@@ -422,33 +425,33 @@ body {
   z-index: 2;
 }
 
-.about_container .inner_about_container .row .col-6:nth-child(1) img {
+.about_container .inner_about_container .row .col_6_first img {
   z-index: 2;
 }
 
-.about_container .inner_about_container .row .col-6 {
+.about_container .inner_about_container .row .col_6 {
   margin-top: -10rem;
 }
 
-.about_container .inner_about_container .row .col-6 img:nth-child(2) {
+.about_container .inner_about_container .row .col_6 img:nth-child(2) {
   margin-top: 2rem;
 }
 
-.about_container .inner_about_container .row .col-6:nth-child(2) {
+.about_container .inner_about_container .row .col_6_second {
   padding-top: 8rem;
   height: 1100px;
 }
 
-.about_container .inner_about_container .row .col-6:nth-child(2) .box {
+.about_container .inner_about_container .row .col_6_second .box {
   border-radius: 50px;
 }
 
-.about_container .inner_about_container .row .col-6:nth-child(2) .about_logo {
+.about_container .inner_about_container .row .col_6_second .about_logo {
   position: absolute;
   top: 1%;
 }
 
-.about_container .inner_about_container .row .col-6:nth-child(2) p {
+.about_container .inner_about_container .row .col_6_second p {
   font-size: 1.5rem;
   line-height: 22px;
   color: #140095;
@@ -456,6 +459,7 @@ body {
 
 .roadmap_container {
   background: url("../assets/roadmap.svg") no-repeat;
+  background-position-x: center;
   width: 100vw;
   background-size: cover;
   padding-top: 14rem;
@@ -463,27 +467,28 @@ body {
 }
 
 .roadmap_container .inner_roadmap_container {
-  max-width: 900px;
+  max-width: 920px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0rem 0.4rem;
 }
 
 .roadmap_container .inner_roadmap_container img {
   height: 220px;
 }
 
-.roadmap_container .inner_roadmap_container .col-7 {
+.roadmap_container .inner_roadmap_container .text_cont {
   font-size: 1.2rem;
   color: #b97e48;
   line-height: 22px;
   font-weight: 500;
 }
 
-.roadmap_container .inner_roadmap_container .col-5 {
+.roadmap_container .inner_roadmap_container .img_cont {
   position: relative;
 }
 
-.roadmap_container .inner_roadmap_container .col-5 h1 {
+.roadmap_container .inner_roadmap_container .img_cont h1 {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -523,9 +528,10 @@ body {
 }
 
 .faq_container .inner_faq_container {
-  max-width: 900px;
+  max-width: 920px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0rem 0.4rem;
   padding-top: 12rem;
 }
 
@@ -571,5 +577,196 @@ body {
 .footer_container .img_cont img {
   margin-top: -3.5rem;
   width: 100%;
+}
+
+@media screen and (max-width: 1050px) {
+  .about_container::after {
+    height: 165px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about_container .inner_about_container .row .col_6_second .about_logo {
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  .about_container .inner_about_container .row .col_6_second {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about_container .inner_about_container .row .col_6_second {
+    height: 100%;
+    padding-bottom: 2rem;
+  }
+  .about_container .inner_about_container .row .col_6_second .box {
+    z-index: 1;
+  }
+  .res_elem {
+    position: absolute;
+    top: 20%;
+    right: -1%;
+    height: 200px;
+    width: 200%;
+    background: #c5c6ff;
+    z-index: 1;
+  }
+  .mint_container .three_boxes .three_boxes_inner {
+    padding: 0rem 2rem !important;
+  }
+  .mint_container .inner_mint_container .i1_stone,
+  .mint_container .inner_mint_container .i2_stone,
+  .hero_container .i3_stone,
+  .hero_container .i2_stone,
+  .hero_container .i1_stone {
+    display: none;
+  }
+  .mint_container .counter_container {
+    top: -3rem;
+    min-width: 555px;
+  }
+  .mint_container .inner_mint_container .single_count .skele {
+    width: 40px;
+  }
+  .characters {
+    height: 380px;
+  }
+  .characters img {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .hero_container {
+    padding: 3.5rem 0rem 12rem 0rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .display_container img {
+    height: 300px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .mint_container .three_boxes .three_boxes_inner .box:nth-child(2) {
+    margin: 1rem 0rem;
+  }
+  .mint_container .inner_mint_container .min_btn {
+    padding: 0rem 2.4rem;
+  }
+  .mint_container .counter_container {
+    min-width: 344px;
+  }
+  .logo_container {
+    padding: 0rem 1rem;
+  }
+  .mint_container .inner_mint_container::after {
+    top: -8rem;
+    height: 130px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .res_elem {
+    position: absolute;
+    top: 10%;
+    right: -2%;
+    height: 200px;
+    width: 200%;
+    background: #c5c6ff;
+    z-index: 1;
+  }
+  .display_container img {
+    height: 200px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .roadmap_container .inner_roadmap_container .img_cont h1 {
+    font-size: 3.2rem;
+  }
+  .roadmap_container .inner_roadmap_container .text_cont {
+    line-height: 20px;
+  }
+  .roadmap_container {
+    background: url("../assets/aboutRes2.svg") no-repeat;
+    background-position-x: center;
+    width: 100vw;
+    background-size: cover;
+    padding-top: 14rem;
+    padding-bottom: 8rem;
+  }
+  .roadmap_container .inner_roadmap_container img {
+    height: 100%;
+  }
+  .roadmap_container {
+    padding-top: 2rem;
+  }
+  .faq_container::after {
+    content: "";
+    height: 184px;
+    margin-top: -14rem;
+  }
+  .faq_container .inner_faq_container {
+    padding-top: 8rem;
+  }
+  .footer_container .img_cont img {
+    padding: 0rem 3rem;
+  }
+  .hero_container {
+    padding: 5.5rem 0rem 12rem 0rem;
+  }
+  .logo_container {
+    padding: 0rem 2rem;
+  }
+  .characters img {
+    margin-top: -15rem;
+  }
+  .mint_container {
+    margin-top: 0rem;
+  }
+  .mint_container .inner_mint_container::after {
+    top: -12rem;
+    height: 180px;
+  }
+  .mint_container .counter_container {
+    top: -5.5rem;
+  }
+  .mint_container .inner_mint_container .single_count img {
+    width: 80%;
+  }
+  .minus,
+  .plus {
+    width: 30px;
+  }
+  .mint_container .inner_mint_container .single_count .skele {
+    width: 26px;
+  }
+  .footer_container {
+    height: 170px;
+  }
+}
+
+@media screen and (min-width: 1450px) {
+  .faq_container::after {
+    height: 305px;
+    top: 5%;
+  }
+  .roadmap_container {
+    padding-top: 18rem;
+  }
+  .mint_container .inner_mint_container::after {
+    height: 168px;
+    width: 100vw;
+    top: -10rem;
+  }
+  .characters img {
+    margin-top: -17rem;
+  }
+  .hero_container {
+    padding: 4.5rem 0rem 8rem 0rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
