--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -214,10 +214,19 @@ body {
 	position: relative;
 
 	img {
-		min-width: 100vw;
+		width: 100vw;
 		height: 100%;
 		margin-top: -14rem;
 	}
+}
+
+.total_count {
+	position: absolute;
+	top: -90%;
+	left: 45%;
+	transform: translateX(-50%);
+	z-index: -1;
+	transform: rotate(10deg);
 }
 // HERO END
 
@@ -749,9 +758,17 @@ body {
 	.footer_container {
 		height: 170px;
 	}
+	.total_count {
+		font-size: 5rem !important;
+		top: -132%;
+		left: 48%;
+	}
+	.mint_container .counter_container img.bg {
+		max-width: 45px;
+	}
 }
 
-@media screen and (min-width: 1450px) {
+@media screen and (min-width: 1500px) {
 	.faq_container::after {
 		height: 305px;
 		top: 5%;
